objects/Country_Code_List__mdt.object
<CustomObject><fields>
        <fullName>Country_Code__c</fullName>
        <description>Store the country code.</description>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Country_Long_Name_Latin__c</fullName>
        <description>Store the country latin long name,</description>
        <label>Country Long Name Latin</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Country_Long_Name_Local__c</fullName>
        <description>Store the country Non Latin Name.</description>
        <label>Country Long Name Local</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Require_States__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check for those country having state associated else set false.</description>
        <label>Require States</label>
        <type>Checkbox</type>
    </fields><description>Store the country name, code.</description><label>Country Code List</label><pluralLabel>Country Codes Lists</pluralLabel><visibility>Public</visibility></CustomObject>